Bug 76916 - Section "User paths" is missing in tab Motion Paths of Animation
Summary: Section "User paths" is missing in tab Motion Paths of Animation
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.2.1 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2014-04-01 19:28 UTC by Regina Henschel
Modified: 2020-09-22 09:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2014-04-01 19:28:23 UTC
Take a presentation and add a graphic object. Select it.
Open pane "Custom Animation" and click on "Add".
Goto tab "Motion Paths".
In former versions this tab had a section "User paths" where you could select "Curve", "Polygon" and "Freeform line". This is missing now. See also http://ask.libreoffice.org/en/question/32147/how-do-i-create-a-custom-animation-path/
Comment 1 sophie 2014-04-02 07:48:35 UTC
Confirmed, the options exist in 4.1.5.3 but no more on 4.2.3.2 - Set as New, changed plateform - Sophie
Comment 2 DOS286 2014-04-05 17:10:37 UTC
I believe this is a symptom of the same bug. Editing of other motion paths does not function. The handle for the "Left" motion path can be dragged, but the changes have no affect. If I view another slide and then go back, the handle has returned to the original location.
Comment 3 Andras Timar 2014-04-16 13:35:39 UTC
 b7ffed72befb25cd2a642e77ec745959b786d6af is the first bad commit
commit b7ffed72befb25cd2a642e77ec745959b786d6af
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sat Aug 3 12:39:17 2013 +0200

    checking the help, none of these go anywhere anyway...
Comment 4 Caolán McNamara 2014-04-16 16:11:35 UTC
Its not my bug FWIW, it happened a few commits earlier actually, but I can see where the problem is if( nTabId == MOTIONPATH )
Comment 5 Commit Notification 2014-04-16 19:27:55 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b9858b0aeae8bfb3af6dd8fcfce6cecdb9b8fab

Resolves: fdo#76916 'User paths' is missing in tab MotionMotion Paths tab



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2014-04-16 19:30:01 UTC
https://gerrit.libreoffice.org/9076 for 4-2
Comment 7 Commit Notification 2014-04-17 09:23:33 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a42ecdaa6bf1c5d0c4749e3178daf2c3dc34ff3&h=libreoffice-4-2

Resolves: fdo#76916 'User paths' is missing in tab MotionMotion Paths tab


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-04-22 21:26:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=60929c3ff6b39d40a9ad81f3fd13ea0ea3ae78e2&h=libreoffice-4-2-4

Resolves: fdo#76916 'User paths' is missing in tab MotionMotion Paths tab


It will be available already in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 07:54:57 UTC Comment hidden (obsolete)
Comment 10 GH 2016-09-25 11:58:30 UTC
This exact same bug seems to have resurfaced in (at least) 5.2.1.2.
Comment 11 kingready 2017-05-12 17:09:03 UTC
(In reply to GH from comment #10)
> This exact same bug seems to have resurfaced in (at least) 5.2.1.2.

I can confirm this on

Version: 5.2.7.2 (x64)
Build ID: 2b7f1e640c46ceb28adf43ee075a6e8b8439ed10
CPU Threads: 8; OS Version: Windows 6.1; UI Render: default; 
Locale: de-AT (de_AT); Calc: group
Comment 12 Katarina Behrens (Inactive) 2017-05-18 10:31:22 UTC
(In reply to GH from comment #10)
> This exact same bug seems to have resurfaced in (at least) 5.2.1.2.

Yep, and it is now tracked as bug#105703. The symptoms of the bug are the same but the cause is different. 

It is now however fixed for 5.3 and 5.4 so I'm closin' this one again