Resolves: fdo#76916 'User paths' is missing in tab MotionMotion Paths tab

(cherry picked from commit 8b9858b0aeae8bfb3af6dd8fcfce6cecdb9b8fab)

Conflicts:
	sd/source/ui/animations/CustomAnimationCreateDialog.cxx

Change-Id: I38deeae3135badde23b9d454d548193af654caab
Reviewed-on: https://gerrit.libreoffice.org/9076
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 8a42ecdaa6bf1c5d0c4749e3178daf2c3dc34ff3)
Reviewed-on: https://gerrit.libreoffice.org/9081
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Reviewed-by: Andrzej Hunt <andrzej.hunt@collabora.com>